--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.maxifier.mxcache</groupId>
     <artifactId>mxcache</artifactId>
-    <version>2.6.4</version>
+    <version>2.6.5-SNAPSHOT</version>
     <name>MxCache</name>
     <description>
         MxCache parent project.
@@ -46,7 +46,7 @@
         <url>https://github.com/maxifier/mxcache.git</url>
         <connection>scm:git:git://github.com/maxifier/mxcache.git</connection>
         <developerConnection>scm:git:git@github.com:maxifier/mxcache.git</developerConnection>
-      <tag>v2.6.4</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
