--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.maxifier.mxcache</groupId>
     <artifactId>mxcache</artifactId>
-    <version>2.6.6-SNAPSHOT</version>
+    <version>2.6.6</version>
     <name>MxCache</name>
     <description>
         MxCache parent project.
@@ -48,7 +47,7 @@
         <url>https://github.com/maxifier/mxcache.git</url>
         <connection>scm:git:git://github.com/maxifier/mxcache.git</connection>
         <developerConnection>scm:git:git@github.com:maxifier/mxcache.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v2.6.6</tag>
     </scm>
 
     <properties>
