--- a/mxcache-gradle-plugin/pom.xml
+++ b/mxcache-gradle-plugin/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>mxcache</artifactId>
         <groupId>com.maxifier.mxcache</groupId>
-        <version>2.6.8</version>
+        <version>2.6.9-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
