--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.maxifier.mxcache</groupId>
     <artifactId>mxcache</artifactId>
-    <version>2.6.9-SNAPSHOT</version>
+    <version>2.6.9</version>
     <name>MxCache</name>
     <description>
         MxCache parent project.
@@ -47,7 +47,7 @@
         <url>https://github.com/maxifier/mxcache.git</url>
         <connection>scm:git:git://github.com/maxifier/mxcache.git</connection>
         <developerConnection>scm:git:git@github.com:maxifier/mxcache.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v2.6.9</tag>
     </scm>
 
     <properties>
