--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
         <module>mxcache-ehcache-integration</module>
         <module>mxcache-guava-integration</module>
 
-        <module>jconsole-stub</module>
         <module>mxcache-idea-api-stubs</module>
         <module>stubgen</module>
     </modules>
@@ -47,17 +46,18 @@
         <url>https://github.com/maxifier/mxcache.git</url>
         <connection>scm:git:git://github.com/maxifier/mxcache.git</connection>
         <developerConnection>scm:git:git@github.com:maxifier/mxcache.git</developerConnection>
-        <tag>v2.6.9</tag>
+        <tag>v0.6.9</tag>
     </scm>
 
     <properties>
-        <sonar.skippedModules>mxcache-asm,jconsole-stub,mxcache-idea-api-stubs</sonar.skippedModules>
+        <sonar.skippedModules>mxcache-asm,mxcache-idea-api-stubs</sonar.skippedModules>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <checkstyle.version>2.9.1</checkstyle.version>
         <checkstyle.config.file>checkstyle.xml</checkstyle.config.file>
         <checkstyle.header.file>maxifier-copyright.txt</checkstyle.header.file>
         <idea.sdk.version>13.696</idea.sdk.version>
         <jgit.version>4.0.0.201505260635-rc2</jgit.version>
+        <jaxb.version>2.3.1</jaxb.version>
     </properties>
 
     <dependencyManagement>
@@ -102,11 +102,6 @@
                 <artifactId>mxcache-jmx</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.maxifier.mxcache</groupId>
-                <artifactId>jconsole-stub</artifactId>
-                <version>${project.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>org.jdom</groupId>
@@ -118,7 +113,7 @@
             <dependency>
                 <groupId>com.google.inject</groupId>
                 <artifactId>guice</artifactId>
-                <version>3.0</version>
+                <version>4.2.2</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -132,14 +127,14 @@
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
-                <version>6.3</version>
+                <version>6.14.3</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>13.0.1</version>
+                <version>28.1-jre</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -185,13 +180,13 @@
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
-                <version>1.3.9</version>
+                <version>3.0.2</version>
             </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.5.10</version>
+                <version>1.7.29</version>
             </dependency>
 
             <dependency>
@@ -209,7 +204,7 @@
             <dependency>
                 <groupId>javax.xml.bind</groupId>
                 <artifactId>jaxb-api</artifactId>
-                <version>2.3.0</version>
+                <version>${jaxb.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.persistence</groupId>
@@ -230,7 +225,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.5.3</version>
                 <configuration>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                     <preparationGoals>clean install</preparationGoals>
@@ -259,7 +254,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <source>11</source>
@@ -291,14 +286,13 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.3</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>0.9.18</version>
+            <version>1.2.3</version>
             <scope>test</scope>
         </dependency>
 
@@ -312,7 +306,7 @@
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.0</version>
+            <version>${jaxb.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
